# stock-radar

./: .gitignore  README.md  app.py  guide_nlinear.md  guide_vnstock.md  plan.md  pyproject.toml  requirements.txt  run.sh
AnswerMe/frontend/src/app/: globals.css
AnswerMe/frontend/src/app/dashboard/thread/[id]/: page.tsx
AnswerMe/frontend/src/components/chat/: ChatInterface.tsx  NewsCard.tsx
TrendNews/: .gitignore  CLAUDE.md  README.md  README.md.  index.html  main.py  requirements.txt
TrendNews/config/: config.yaml  frequency_words.txt
TrendNews/docker/: manage.py
TrendNews/mcp_server/: __init__.py  server.py
TrendNews/mcp_server/services/: __init__.py  cache_service.py  data_service.py  parser_service.py
TrendNews/mcp_server/tools/: __init__.py  analytics.py  config_mgmt.py  data_query.py  search_tools.py  system.py
TrendNews/mcp_server/utils/: __init__.py  date_parser.py  errors.py  validators.py
TrendNews/src/: README.md  __init__.py
TrendNews/src/config/: __init__.py  constants.py  settings.py
TrendNews/src/core/: __init__.py  analyzer.py  data_fetcher.py  push_manager.py  vietnam_fetcher.py
TrendNews/src/notifiers/: __init__.py  base.py  email.py  manager.py  telegram.py
TrendNews/src/processors/: __init__.py  data_processor.py  frequency_words.py  report_processor.py  statistics.py
TrendNews/src/renderers/: __init__.py  base.py  html_renderer.py  telegram_renderer.py
TrendNews/src/scrapers/: __init__.py  base_scraper.py  cafef_scraper.py  dantri_scraper.py  money24h_scraper.py  vnexpress_scraper.py
TrendNews/src/utils/: __init__.py  file_utils.py  format_utils.py  message_utils.py  text_utils.py  time_utils.py  version_check.py
trading_system/: README.md  __init__.py  analyze.py  app.py  data_loader.py  deep_analyze.py  demo.py  run.sh  test_phase1.py  test_real_data.py  trading_engine.py
trading_system/core/: __init__.py  risk_manager.py  signal_aggregator.py
trading_system/foundation/: __init__.py  foundation_signals.py  nlinear_model.py
trading_system/pages/: __init__.py  chat_page.py  info_page.py  trading_page.py
trading_system/phase1_foundation/: __init__.py  arima_model.py  foundation_signals.py  hmm_regime.py  kalman_filter.py  statistics.py
trading_system/phase2_network/: __init__.py  correlation_network.py  lead_lag_detector.py  network_metrics.py  network_signals.py
trading_system/phase3_multivariate/: __init__.py  copula_model.py  granger_causality.py  multivariate_signals.py  var_model.py
trading_system/phase4_pattern/: __init__.py  anomaly_detector.py  factor_model.py  pattern_signals.py  regime_detector.py
trading_system/phase5_crypto/: __init__.py  crypto_signals.py
